# re_math

./: CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  lychee.toml
benches/: bounding_box.rs  conformal3.rs  iso_transform.rs  support.rs
benches/support/: macros.rs
scripts/: generate_changelog.py
snapshots/: public_api.snap
src/: bounding_box.rs  color_rgba8.rs  conformal.rs  iso_transform.rs  lib.rs  plane3.rs  ray3.rs  vec2_ext.rs  vec3_ext.rs  vec4_ext.rs
tests/: public-api.rs
