[package]
edition = "2021"
name = "macaw"
version = "0.19.1"
authors = ["Embark <opensource@embark-studios.com>"]
publish = true
description = "An opinionated game math library built on top the excellent glam"
readme = "README.md"
keywords = ["gamedev", "math"]
categories = ["game-engines"]
license = "MIT OR Apache-2.0"

[lib]
test = true
doctest = false

[[bench]]
name = "iso_transform"
harness = false

[[bench]]
name = "bounding_box"
harness = false

[[bench]]
name = "conformal3"
harness = false

[dependencies.bytemuck]
version = "1.9"
optional = true

[dependencies.glam]
version = "0.25"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
default-features = false

[dependencies.speedy]
version = "0.8"
features = ["glam"]
optional = true

[dev-dependencies.tiny-bench]
version = "0.3.0"

[features]
assert = ["glam/glam-assert"]
debug_assert = ["glam/debug-glam-assert"]
default = ["std"]
libm = ["glam/libm"]
std = ["glam/std"]
with_bytemuck = ["bytemuck", "glam/bytemuck"]
with_serde = ["serde", "glam/serde"]
with_speedy = ["speedy"]

[target."cfg(miri)".dependencies.glam]
version = "0.25"
features = ["scalar-math"]
default-features = false

[target."cfg(target_arch = \"spirv\")".dependencies.num-traits]
version = "0.2.14"
features = ["libm"]
default-features = false

[lints.clippy]
all = "warn"
await_holding_lock = "warn"
branches_sharing_code = "warn"
cast_lossless = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
clear_with_drain = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
default_union_representation = "warn"
derive_partial_eq_without_eq = "allow"
disallowed_methods = "warn"
disallowed_script_idents = "warn"
disallowed_types = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_enum = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
format_collect = "allow"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
implied_bounds_in_impls = "warn"
imprecise_flops = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
iter_not_returning_iterator = "warn"
large_digit_groups = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatched_target_os = "warn"
missing_enforced_import_renames = "warn"
mod_module_files = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
negative_feature_names = "warn"
nonstandard_macro_braces = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
print_stderr = "warn"
print_stdout = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
rc_mutex = "warn"
readonly_write_lock = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
should_panic_without_expect = "warn"
single_match_else = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
todo = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "allow"
transmute_ptr_to_ptr = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
uninlined_format_args = "allow"
unnecessary_box_returns = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"
zero_sized_map_values = "warn"

[lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
